docs-archive/apache-airflow-providers-amazon/9.14.0/_sources/_api/airflow/providers/amazon/aws/transfers/sql_to_s3/index.rst.txt
airflow.providers.amazon.aws.transfers.sql_to_s3
================================================

.. py:module:: airflow.providers.amazon.aws.transfers.sql_to_s3


Attributes
----------

.. autoapisummary::

   airflow.providers.amazon.aws.transfers.sql_to_s3.FILE_OPTIONS_MAP


Classes
-------

.. autoapisummary::

   airflow.providers.amazon.aws.transfers.sql_to_s3.FILE_FORMAT
   airflow.providers.amazon.aws.transfers.sql_to_s3.FileOptions
   airflow.providers.amazon.aws.transfers.sql_to_s3.SqlToS3Operator


Module Contents
---------------

.. py:class:: FILE_FORMAT

   Bases: :py:obj:`enum.Enum`


   Possible file formats.


   .. py:attribute:: CSV


   .. py:attribute:: JSON


   .. py:attribute:: PARQUET


.. py:class:: FileOptions

   Bases: :py:obj:`tuple`


   .. py:attribute:: mode


   .. py:attribute:: suffix


   .. py:attribute:: function


.. py:data:: FILE_OPTIONS_MAP

.. py:class:: SqlToS3Operator(*, query, s3_bucket, s3_key, sql_conn_id, sql_hook_params = None, parameters = None, read_kwargs = None, read_pd_kwargs = None, df_type = 'pandas', replace = False, aws_conn_id = 'aws_default', verify = None, file_format = 'csv', max_rows_per_file = 0, df_kwargs = None, pd_kwargs = None, groupby_kwargs = None, **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.version_compat.BaseOperator`


   Saves data from a specific SQL query into a file in S3.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:SqlToS3Operator`

   :param query: the sql query to be executed. If you want to execute a file, place the absolute path of it,
       ending with .sql extension. (templated)
   :param s3_bucket: bucket where the data will be stored. (templated)
   :param s3_key: desired key for the file. It includes the name of the file. (templated)
   :param replace: whether or not to replace the file in S3 if it previously existed
   :param sql_conn_id: reference to a specific database.
   :param sql_hook_params: Extra config params to be passed to the underlying hook.
       Should match the desired hook constructor params.
   :param parameters: (optional) the parameters to render the SQL query with.
   :param read_kwargs: arguments to include in DataFrame when reading from SQL (supports both pandas and polars).
   :param df_type: the type of DataFrame to use ('pandas' or 'polars'). Defaults to 'pandas'.
   :param aws_conn_id: reference to a specific S3 connection
   :param verify: Whether or not to verify SSL certificates for S3 connection.
       By default SSL certificates are verified.
       You can provide the following values:

       - ``False``: do not validate SSL certificates. SSL will still be used
               (unless use_ssl is False), but SSL certificates will not be verified.
       - ``path/to/cert/bundle.pem``: A filename of the CA cert bundle to uses.
               You can specify this argument if you want to use a different
               CA cert bundle than the one used by botocore.
   :param file_format: the destination file format, only string 'csv', 'json' or 'parquet' is accepted.
   :param max_rows_per_file: (optional) argument to set destination file number of rows limit, if source data
       is larger than that, it will be dispatched into multiple files.
       Will be ignored if ``groupby_kwargs`` argument is specified.
   :param df_kwargs: arguments to include in DataFrame ``.to_parquet()``, ``.to_json()`` or ``.to_csv()``.
   :param groupby_kwargs: argument to include in DataFrame ``groupby()``.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('s3_bucket', 's3_key', 'query', 'sql_conn_id')



   .. py:attribute:: template_ext
      :type:  collections.abc.Sequence[str]
      :value: ('.sql',)



   .. py:attribute:: template_fields_renderers


   .. py:attribute:: query


   .. py:attribute:: s3_bucket


   .. py:attribute:: s3_key


   .. py:attribute:: sql_conn_id


   .. py:attribute:: aws_conn_id
      :value: 'aws_default'



   .. py:attribute:: verify
      :value: None



   .. py:attribute:: replace
      :value: False



   .. py:attribute:: parameters
      :value: None



   .. py:attribute:: max_rows_per_file
      :value: 0



   .. py:attribute:: groupby_kwargs


   .. py:attribute:: sql_hook_params
      :value: None



   .. py:attribute:: df_type
      :value: 'pandas'



   .. py:attribute:: read_kwargs
      :value: None



   .. py:attribute:: df_kwargs
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



